# ai-refactor

backend/: .gitattributes  .gitignore  MODEL_FILES.md  pyproject.toml
backend/.git.bak/: COMMIT_EDITMSG  config  index  packed-refs
backend/.git.bak/info/: refs
backend/.git.bak/logs/refs/remotes/origin/: main
backend/.git.bak/objects/info/: commit-graph  packs
backend/.git.bak/objects/pack/: pack-bf2309a91511e342146859abf6c7afd633468181.idx  pack-bf2309a91511e342146859abf6c7afd633468181.pack  pack-bf2309a91511e342146859abf6c7afd633468181.rev
backend/.git.bak/refs/remotes/origin/: main
backend/src/ai_refactor/models/: code.py
backend/src/ai_refactor/services/: deepseek_client.py  llm_factory.py  open_ai_service.py
frontend/: README.md
src/ai_refactor/: main.py  test.py
src/ai_refactor/routers/: refactor.py
src/ai_refactor/services/: llm_client.py  local_llm_service.py
