[project]
name = "ai_refactor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ctransformers>=0.2.27",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "openai>=2.5.0",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
]
